# plex-music-rating-sync

./: .gitignore  MediaPlayer.py  README.md  cache_manager.py  config.ini.template  filesystem_provider.py  log_manager.py  pyproject.toml  ratings.py  requirements.txt  stats_manager.py  sync_items.py  sync_pair.py  sync_ratings.py
manager/: __init__.py  cache_manager.py  config_manager.py  log_manager.py  ratings.py  stats_manager.py
tests/: conftest.py  helpers.py  mock_objects.py  test.flac  test_filesystem_provider.py  test_playlist_pair.py  test_prompt_filters.py  test_ratings.py  test_sync_ratings.py  test_track_pair.py
tests/filesystem_provider/: test_audio_tag_handler.py  test_filesystem_provider_finalize.py  test_filesystem_provider_playlist.py  test_filesystem_provider_read.py  test_filesystemprovider.py  test_id3_handler.py  test_id3_tag_registry.py  test_vorbis_handler.py
tests/integration/: test_cli_filtering_behavior.py  test_conflict_resolution_manual.py  test_end_to_end_conflict_resolution.py  test_end_to_end_playlist_sync.py  test_end_to_end_sync_playlists.py  test_end_to_end_sync_tracks.py  test_end_to_end_track_sync.py
tests/manager/: test_cache_manager.py  test_config_manager.py  test_log_manager.py  test_manager.py  test_stats_manager.py
tests/mediaplayer/: test_filesystem_player.py  test_mediamonkey_player.py  test_mediaplayer_base.py  test_plex_player.py
tests/ratings/: test_rating.py
tests/sync_items/: test_audio_tag.py  test_sync_items.py
tests/sync_pair/: test_playlistpair.py  test_playlistpair_match.py  test_playlistpair_sync.py  test_syncstate.py  test_trackpair.py  test_trackpair_match.py  test_trackpair_sync.py
tests/sync_ratings/: test_plexsync.py
tests/ui/: test_user_prompt.py
tests/unit/: test_audio_tag_handler_id3.py  test_audio_tag_handler_vorbis.py  test_cache_manager.py  test_config_manager.py  test_rating.py  test_stats_manager.py  test_tag_registry.py  test_tag_write_strategy.py  test_user_prompt.py  test_utils.py
ui/: help.py  prompt.py
