[project]
name = "plex-music-rating-sync"
version = "0.1.0"
description = "synchronize track ratings and playlists between Media Players"
requires-python = ">=3.12"
dependencies = [
	"PlexAPI==4.17.0",
	"fuzzywuzzy==0.18.0",
	"pypiwin32==223",
	"numpy==2.2.3",
	"ConfigArgParse",
    "configupdater",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "mutagen==1.47.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.3",  # linter, formatter, import sort
    "mypy==1.13.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-html==4.1.1",
]
fuzzy = [
    "Levenshtein==0.27.1"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["*"]  # This includes all Python packages

[tool.ruff]
fix = true
line-length = 179
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear,
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
ignore = ["ANN002", "ANN003", "ANN204", "ANN202", "RUF012"]
# logger-objects = ["logging_setup.logger"]  # needs setup 
fixable=["ALL"]
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN202", "ANN001", "ANN002", "ANN003", "ANN101", "ANN102"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
mypy-init-return = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[lint]
select = ["I002", "TCH004"]

[lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = " --tb=short --cov=. --cov-report=html --junitxml=docs/reports/tests/pytest.xml --html=docs/reports/tests/tests.html"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
parallel = true
branch = true
source = ["."]
omit = ["tests/*", "./__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]